# motionSystemManager

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.c  main.c
common/: CMakeLists.txt  UDP.h  process_message.h
common/include/: process_message.h
common/src/: UDP.c  processMessage.c
include/: motion_system_messages.h
include/client/: client.h
include/common/: UDP.h  motion_system_messages.h  process_message.h
include/manager/: msm.h
include/server/: server.h
manager/: CMakeLists.txt
manager/include/: msm.h
manager/src/: main.c
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.c  server.c
src/: main.c
src/client/: client.c
src/common/: UDP.c  processMessage.c
src/manager/: msm.c
src/server/: server.c
